# svar

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.am  README.md  config.h.in  configure.ac
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  cmakebuild.yaml  code-scanning.yaml  codeql-analysis.yaml
cmake/: FindMp3Lame.cmake
src/: Makefile.am  debug.h  log.h  main.c  pcm.c  pcm.h  rbuf.c  rbuf.h  recorder-alsa.c  recorder-alsa.h  recorder-pipewire.c  recorder-pipewire.h  recorder-portaudio.c  recorder-portaudio.h  recorder.c  recorder.h  svar.c  writer-mp3.c  writer-mp3.h  writer-ogg.c  writer-ogg.h  writer-opus.c  writer-opus.h  writer-vorbis.c  writer-vorbis.h  writer-wav.c  writer-wav.h  writer.c  writer.h  writer_mp3lame.c  writer_mp3lame.h  writer_sndfile.c  writer_sndfile.h  writer_vorbis.c  writer_vorbis.h
test/: tc-pcm.c  tc-rbuf.c  tc-recorder.c  tc-writer.c  test-runner.c
